# coterm

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  .gitmodules  .prettierrc  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  docker-compose.example.yml  docker-compose.yml  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cache-test.yml  release.yml
dockerfiles/release/: Caddyfile  Dockerfile
old/: .dockerignore  .gitmodules  docker-compose.yml  package-lock.json  tsconfig.json  vite.config.ts
old/dockerfiles/release/: startup.sh
old/src/: App.tsx  index.css  main.tsx
old/src/components/elements/: LoadingDots.tsx  XTerm.tsx
src/: App.tsx  app.pcss  index.css
src-rust/: Cargo.toml  helpers.rs  lib.rs  main.rs  no_vnc.rs  xterm.rs
src-rust/api/pve/auth/: create_ticket.rs
src-rust/src/: app.rs  helpers.rs  main.rs  no_vnc.rs  xterm.rs
src-rust/src/routes/: websocket.rs
src-rust/src/util/: broadcast_config.rs  exceptions.rs  mod.rs  websocket.rs
src-rust/src/util/api/: http.rs  mod.rs  novnc.rs  proxmox.rs  xtermjs.rs
src-rust/src/util/crypto/: des.rs  mod.rs  rustls.rs
src-rust/src/util/terminals/: mod.rs  novnc.rs  xtermjs.rs
src/components/: NoTokenFoundModal.tsx  UnsupportedConsoleModal.tsx
src/components/elements/: Modal.tsx
src/lib/api/: http.ts
src/lib/components/terminals/: NoVNC.svelte  XTermJS.svelte
src/lib/components/ui/: LogoOutlined.svelte  LogoSpinner.svelte  ScreenSpinner.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
