[package]
name = "coterm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coterm"
path = "src-rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
tower = "0.4.13"
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"]}
futures-util = "0.3.28"
httparse = "1.8.0"
base64 = "0.21.0"
