[package]
name = "coterm"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "coterm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["ws", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
tower = "0.4.13"
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.28"
httparse = "1.8.0"
base64 = "0.21.0"
rand = "0.8.5"
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["rustls-tls", "json"], default-features = false }
url = "2.3.1"
urlencoding = "2.1.2"
jsonwebtoken = "8.3.0"
dotenv_codegen = "0.15.0"
axum-auth = "0.4.0"
axum-extra = { version = "0.7.4", features = ["cookie"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
